--- a/pristine-viewmodel/package.json
+++ b/pristine-viewmodel/package.json
@@ -1,11 +1,15 @@
 {
   "name": "pristine-viewmodel",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pristine-viewparser": "file:../pristine-viewparser",
+    "pristine-eventhandler": "file:../pristine-eventhandler"
+  }
 }
