--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "pristine",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "sample.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pristine-controller": "file:pristine-controller",
+    "pristine-viewmodel": "file:pristine-viewmodel"
+  }
 }
