--- a/pristine-controller/package.json
+++ b/pristine-controller/package.json
@@ -1,10 +1,14 @@
 {
   "name": "pristine-controller",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "pristine-controller": "file:.",
+    "pristine-eventhandler": "file:../pristine-eventhandler"
   },
   "author": "",
   "license": "ISC"
