--- a/pristine-viewparser/package.json
+++ b/pristine-viewparser/package.json
@@ -1,11 +1,14 @@
 {
   "name": "pristine-viewparser",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pristine-domutil": "0.0.1"
+  }
 }
